--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passagem</title>
-</head>
-<body>
-    <h1>Passagem</h1>
+{% extends 'base.html' %}
+{% block content %}
+{% include 'partials/_navbar.html' %}
+<form action="{% url 'revisao_consulta' %}" method="post">
+    {% csrf_token %}
     {{ form }}
-</body>
-</html>
+    <input type="submit" value="Ok" class="btn btn-success">
+</form>
+{% endblock %}
