--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-{% include 'partials/_navbar.html' %}
+<p>Data da consulta: {{ form.data_pesquisa.value }}</p>
 <p>Sua origem é: {{ form.origem.value }}</p>
 <p>Seu destino é: {{ form.destino.value }}</p>
 <p>Sua data de ida é: {{ form.data_ida.value }}</p>
-<p>Sua data de retorno é: {{ form.data_volta.value }}</p>
+<p>Tipo de vôo: {{ form.tipo_classe.value }}</p>
+<p>Observações: {{ form.observacoes.value }}</p>
+<p>Email: {{ form.email.value }}</p>
 {% endblock %}
