Adicionando modelos para os formularios

--- a/templates/minha_consulta.html
+++ b/templates/minha_consulta.html
@@ -4,7 +4,7 @@
 <p>Sua origem é: {{ form.origem.value }}</p>
 <p>Seu destino é: {{ form.destino.value }}</p>
 <p>Sua data de ida é: {{ form.data_ida.value }}</p>
-<p>Tipo de vôo: {{ form.tipo_classe.value }}</p>
-<p>Observações: {{ form.observacoes.value }}</p>
-<p>Email: {{ form.email.value }}</p>
+<p>Tipo de vôo: {{ form.classe_viagem.value }}</p>
+<p>Observações: {{ form.informacoes.value }}</p>
+<p>Email: {{ pessoa_form.email.value }}</p>
 {% endblock %}
