--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
     </section>    
     {% endfor %}
     {% endfor %}
+
+    {% for field in pessoa_form.visible_fields %}
+    <div class="form-group">
+        <label for="{{ field.id_for_labe }}">{{ field.label }}</label>    
+        {{ field | add_class:'form-control'}}
+    </div>
+    {% endfor %}
     <input type="submit" value="Ok" class="btn btn-success">
 </form>
 {% endblock %}
